# en2es

./: .gitignore  main.py  pyproject.toml
dev/: exp.ipynb
src/: config.py  decoder.py  encoder.py  eval.py  healthchecks.py  model.py  processing.py  tokenizer.py  train.py
tests/: model.py  modules.py  processing.py  utils.py
