[project]
name = "encoder-decoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "sacrebleu>=2.6.0",
    "torch>=2.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }